# gotty-py

./: CHANGELOG.md  LICENSE  Makefile  README.md  __init__.py  gotty_client.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
examples/: advanced_usage.py  basic_usage.py
gotty_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_gotty_client.py
