[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gotty-py"
version = "1.0.0"
description = "A generic Python client for interacting with gotty terminal interfaces"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thomas Wentworth", email = "thomaswentworth@example.com"}
]
maintainers = [
    {name = "Thomas Wentworth", email = "thomaswentworth@example.com"}
]
keywords = ["gotty", "websocket", "terminal", "client", "tty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = [
    "websockets>=11.0.3",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.5.1",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/twentworth/gotty-py"
Documentation = "https://github.com/twentworth/gotty-py#readme"
Repository = "https://github.com/twentworth/gotty-py.git"
"Bug Tracker" = "https://github.com/twentworth/gotty-py/issues"
"Changelog" = "https://github.com/twentworth/gotty-py/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["gotty_py*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["gotty_py"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "websockets.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.mypy-gotty_client]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]
